// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MonthlyCalendar render should render DatePicker with style 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MonthlyCalendar
    onDateChange={[MockFunction]}
    selectedDate={"2018-02-14T00:00:00.000Z"}
    timeEntries={
      Array [
        Object {
          "__typename": "TimeEntry",
          "activity": "Code/ Document Reviews",
          "date": "2018-02-11",
          "endBreakTime": "12:35",
          "endTime": "18:28",
          "phase": "Project Phase Name",
          "startBreakTime": "11:35",
          "startTime": "9:28",
          "total": "8:00",
        },
        Object {
          "__typename": "TimeEntry",
          "activity": "Code/ Document Reviews",
          "date": "2018-02-12",
          "endBreakTime": "12:35",
          "endTime": "18:28",
          "phase": "Project Phase Name",
          "startBreakTime": "11:35",
          "startTime": "9:28",
          "total": "8:00",
        },
        Object {
          "__typename": "TimeEntry",
          "activity": "Code/ Document Reviews",
          "date": "2018-02-13",
          "endBreakTime": "12:35",
          "endTime": "18:28",
          "phase": "Project Phase Name",
          "startBreakTime": "11:35",
          "startTime": "9:28",
          "total": "8:00",
        },
        Object {
          "__typename": "TimeEntry",
          "activity": "",
          "date": "2018-02-14",
          "endBreakTime": "",
          "endTime": "",
          "phase": "",
          "startBreakTime": "",
          "startTime": "",
          "total": "",
        },
        Object {
          "__typename": "TimeEntry",
          "activity": "Code/ Document Reviews",
          "date": "2018-02-15",
          "endBreakTime": "12:35",
          "endTime": "18:28",
          "phase": "Project Phase Name",
          "startBreakTime": "11:35",
          "startTime": "9:28",
          "total": "8:00",
        },
        Object {
          "__typename": "TimeEntry",
          "activity": "Code/ Document Reviews",
          "date": "2018-02-16",
          "endBreakTime": "",
          "endTime": "18:28",
          "phase": "Project Phase Name",
          "startBreakTime": "",
          "startTime": "9:28",
          "total": "8:00",
        },
        Object {
          "__typename": "TimeEntry",
          "activity": "Code/ Document Reviews",
          "date": "2018-02-17",
          "endBreakTime": "12:35",
          "endTime": "18:28",
          "phase": "Project Phase Name",
          "startBreakTime": "11:35",
          "startTime": "9:28",
          "total": "8:00",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "allowSameDay": false,
      "dateFormat": "L",
      "dateFormatCalendar": "MMMM YYYY",
      "disabled": false,
      "disabledKeyboardNavigation": false,
      "dropdownMode": "scroll",
      "filterDate": [Function],
      "highlightDates": Array [
        Object {
          "calendar-checked": Array [
            "2018-02-11T02:00:00.000Z",
            "2018-02-12T02:00:00.000Z",
            "2018-02-13T02:00:00.000Z",
            "2018-02-15T02:00:00.000Z",
            "2018-02-16T02:00:00.000Z",
            "2018-02-17T02:00:00.000Z",
          ],
        },
        Object {
          "calendar-unchecked": Array [
            "2018-02-14T02:00:00.000Z",
          ],
        },
        Object {
          "calendar-holiday": Array [],
        },
        Object {
          "calendar-vacation": Array [],
        },
        Object {
          "calendar-otanjoubi": Array [],
        },
        Object {
          "calendar-absence": Array [],
        },
        Object {
          "calendar-future-day": Array [
            "2018-02-15T02:00:00.000Z",
            "2018-02-16T02:00:00.000Z",
            "2018-02-17T02:00:00.000Z",
          ],
        },
      ],
      "inline": true,
      "maxTime": "2018-02-14T12:00:00.000Z",
      "monthsShown": 1,
      "onBlur": [Function],
      "onChange": [MockFunction],
      "onClickOutside": [Function],
      "onFocus": [Function],
      "onKeyDown": [Function],
      "onMonthChange": [Function],
      "onSelect": [Function],
      "onYearChange": [Function],
      "preventOpenOnFocus": false,
      "selected": "2018-02-14T00:00:00.000Z",
      "shouldCloseOnSelect": true,
      "showTimeSelect": false,
      "timeCaption": "Time",
      "timeIntervals": 30,
      "withPortal": false,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "allowSameDay": false,
        "dateFormat": "L",
        "dateFormatCalendar": "MMMM YYYY",
        "disabled": false,
        "disabledKeyboardNavigation": false,
        "dropdownMode": "scroll",
        "filterDate": [Function],
        "highlightDates": Array [
          Object {
            "calendar-checked": Array [
              "2018-02-11T02:00:00.000Z",
              "2018-02-12T02:00:00.000Z",
              "2018-02-13T02:00:00.000Z",
              "2018-02-15T02:00:00.000Z",
              "2018-02-16T02:00:00.000Z",
              "2018-02-17T02:00:00.000Z",
            ],
          },
          Object {
            "calendar-unchecked": Array [
              "2018-02-14T02:00:00.000Z",
            ],
          },
          Object {
            "calendar-holiday": Array [],
          },
          Object {
            "calendar-vacation": Array [],
          },
          Object {
            "calendar-otanjoubi": Array [],
          },
          Object {
            "calendar-absence": Array [],
          },
          Object {
            "calendar-future-day": Array [
              "2018-02-15T02:00:00.000Z",
              "2018-02-16T02:00:00.000Z",
              "2018-02-17T02:00:00.000Z",
            ],
          },
        ],
        "inline": true,
        "maxTime": "2018-02-14T12:00:00.000Z",
        "monthsShown": 1,
        "onBlur": [Function],
        "onChange": [MockFunction],
        "onClickOutside": [Function],
        "onFocus": [Function],
        "onKeyDown": [Function],
        "onMonthChange": [Function],
        "onSelect": [Function],
        "onYearChange": [Function],
        "preventOpenOnFocus": false,
        "selected": "2018-02-14T00:00:00.000Z",
        "shouldCloseOnSelect": true,
        "showTimeSelect": false,
        "timeCaption": "Time",
        "timeIntervals": 30,
        "withPortal": false,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`MonthlyCalendar render should render without timeEntries 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MonthlyCalendar
    onDateChange={[MockFunction]}
    selectedDate={"2018-02-14T00:00:00.000Z"}
    timeEntries={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "allowSameDay": false,
      "dateFormat": "L",
      "dateFormatCalendar": "MMMM YYYY",
      "disabled": false,
      "disabledKeyboardNavigation": false,
      "dropdownMode": "scroll",
      "filterDate": [Function],
      "highlightDates": Array [
        Object {
          "calendar-checked": Array [],
        },
        Object {
          "calendar-unchecked": Array [],
        },
        Object {
          "calendar-holiday": Array [],
        },
        Object {
          "calendar-vacation": Array [],
        },
        Object {
          "calendar-otanjoubi": Array [],
        },
        Object {
          "calendar-absence": Array [],
        },
        Object {
          "calendar-future-day": Array [],
        },
      ],
      "inline": true,
      "maxTime": "2018-02-22T12:00:00.000Z",
      "monthsShown": 1,
      "onBlur": [Function],
      "onChange": [MockFunction],
      "onClickOutside": [Function],
      "onFocus": [Function],
      "onKeyDown": [Function],
      "onMonthChange": [Function],
      "onSelect": [Function],
      "onYearChange": [Function],
      "preventOpenOnFocus": false,
      "selected": "2018-02-14T00:00:00.000Z",
      "shouldCloseOnSelect": true,
      "showTimeSelect": false,
      "timeCaption": "Time",
      "timeIntervals": 30,
      "withPortal": false,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "allowSameDay": false,
        "dateFormat": "L",
        "dateFormatCalendar": "MMMM YYYY",
        "disabled": false,
        "disabledKeyboardNavigation": false,
        "dropdownMode": "scroll",
        "filterDate": [Function],
        "highlightDates": Array [
          Object {
            "calendar-checked": Array [],
          },
          Object {
            "calendar-unchecked": Array [],
          },
          Object {
            "calendar-holiday": Array [],
          },
          Object {
            "calendar-vacation": Array [],
          },
          Object {
            "calendar-otanjoubi": Array [],
          },
          Object {
            "calendar-absence": Array [],
          },
          Object {
            "calendar-future-day": Array [],
          },
        ],
        "inline": true,
        "maxTime": "2018-02-22T12:00:00.000Z",
        "monthsShown": 1,
        "onBlur": [Function],
        "onChange": [MockFunction],
        "onClickOutside": [Function],
        "onFocus": [Function],
        "onKeyDown": [Function],
        "onMonthChange": [Function],
        "onSelect": [Function],
        "onYearChange": [Function],
        "preventOpenOnFocus": false,
        "selected": "2018-02-14T00:00:00.000Z",
        "shouldCloseOnSelect": true,
        "showTimeSelect": false,
        "timeCaption": "Time",
        "timeIntervals": 30,
        "withPortal": false,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`MonthlyCalendar render should show if a day in past is blocked 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MonthlyCalendar
    onDateChange={[MockFunction]}
    selectedDate={"2018-02-21T00:00:00.000Z"}
    timeEntries={
      Array [
        Object {
          "__typename": "TimeEntry",
          "activity": "Code/ Document Reviews",
          "date": "2018-02-11",
          "endBreakTime": "12:35",
          "endTime": "18:28",
          "phase": "Project Phase Name",
          "startBreakTime": "11:35",
          "startTime": "9:28",
          "total": "8:00",
        },
        Object {
          "__typename": "TimeEntry",
          "activity": "Code/ Document Reviews",
          "date": "2018-02-12",
          "endBreakTime": "12:35",
          "endTime": "18:28",
          "phase": "Project Phase Name",
          "startBreakTime": "11:35",
          "startTime": "9:28",
          "total": "8:00",
        },
        Object {
          "__typename": "TimeEntry",
          "activity": "Code/ Document Reviews",
          "date": "2018-02-13",
          "endBreakTime": "12:35",
          "endTime": "18:28",
          "phase": "Project Phase Name",
          "startBreakTime": "11:35",
          "startTime": "9:28",
          "total": "8:00",
        },
        Object {
          "__typename": "TimeEntry",
          "activity": "",
          "date": "2018-02-14",
          "endBreakTime": "",
          "endTime": "",
          "phase": "",
          "startBreakTime": "",
          "startTime": "",
          "total": "",
        },
        Object {
          "__typename": "TimeEntry",
          "activity": "Code/ Document Reviews",
          "date": "2018-02-15",
          "endBreakTime": "12:35",
          "endTime": "18:28",
          "phase": "Project Phase Name",
          "startBreakTime": "11:35",
          "startTime": "9:28",
          "total": "8:00",
        },
        Object {
          "__typename": "TimeEntry",
          "activity": "Code/ Document Reviews",
          "date": "2018-02-16",
          "endBreakTime": "",
          "endTime": "18:28",
          "phase": "Project Phase Name",
          "startBreakTime": "",
          "startTime": "9:28",
          "total": "8:00",
        },
        Object {
          "__typename": "TimeEntry",
          "activity": "Code/ Document Reviews",
          "date": "2018-02-17",
          "endBreakTime": "12:35",
          "endTime": "18:28",
          "phase": "Project Phase Name",
          "startBreakTime": "11:35",
          "startTime": "9:28",
          "total": "8:00",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "allowSameDay": false,
      "dateFormat": "L",
      "dateFormatCalendar": "MMMM YYYY",
      "disabled": false,
      "disabledKeyboardNavigation": false,
      "dropdownMode": "scroll",
      "filterDate": [Function],
      "highlightDates": Array [
        Object {
          "calendar-checked": Array [
            "2018-02-11T02:00:00.000Z",
            "2018-02-12T02:00:00.000Z",
            "2018-02-13T02:00:00.000Z",
            "2018-02-15T02:00:00.000Z",
            "2018-02-16T02:00:00.000Z",
            "2018-02-17T02:00:00.000Z",
          ],
        },
        Object {
          "calendar-unchecked": Array [
            "2018-02-14T02:00:00.000Z",
          ],
        },
        Object {
          "calendar-holiday": Array [],
        },
        Object {
          "calendar-vacation": Array [],
        },
        Object {
          "calendar-otanjoubi": Array [],
        },
        Object {
          "calendar-absence": Array [],
        },
        Object {
          "calendar-future-day": Array [],
        },
      ],
      "inline": true,
      "maxTime": "2018-02-22T12:00:00.000Z",
      "monthsShown": 1,
      "onBlur": [Function],
      "onChange": [MockFunction],
      "onClickOutside": [Function],
      "onFocus": [Function],
      "onKeyDown": [Function],
      "onMonthChange": [Function],
      "onSelect": [Function],
      "onYearChange": [Function],
      "preventOpenOnFocus": false,
      "selected": "2018-02-21T00:00:00.000Z",
      "shouldCloseOnSelect": true,
      "showTimeSelect": false,
      "timeCaption": "Time",
      "timeIntervals": 30,
      "withPortal": false,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "allowSameDay": false,
        "dateFormat": "L",
        "dateFormatCalendar": "MMMM YYYY",
        "disabled": false,
        "disabledKeyboardNavigation": false,
        "dropdownMode": "scroll",
        "filterDate": [Function],
        "highlightDates": Array [
          Object {
            "calendar-checked": Array [
              "2018-02-11T02:00:00.000Z",
              "2018-02-12T02:00:00.000Z",
              "2018-02-13T02:00:00.000Z",
              "2018-02-15T02:00:00.000Z",
              "2018-02-16T02:00:00.000Z",
              "2018-02-17T02:00:00.000Z",
            ],
          },
          Object {
            "calendar-unchecked": Array [
              "2018-02-14T02:00:00.000Z",
            ],
          },
          Object {
            "calendar-holiday": Array [],
          },
          Object {
            "calendar-vacation": Array [],
          },
          Object {
            "calendar-otanjoubi": Array [],
          },
          Object {
            "calendar-absence": Array [],
          },
          Object {
            "calendar-future-day": Array [],
          },
        ],
        "inline": true,
        "maxTime": "2018-02-22T12:00:00.000Z",
        "monthsShown": 1,
        "onBlur": [Function],
        "onChange": [MockFunction],
        "onClickOutside": [Function],
        "onFocus": [Function],
        "onKeyDown": [Function],
        "onMonthChange": [Function],
        "onSelect": [Function],
        "onYearChange": [Function],
        "preventOpenOnFocus": false,
        "selected": "2018-02-21T00:00:00.000Z",
        "shouldCloseOnSelect": true,
        "showTimeSelect": false,
        "timeCaption": "Time",
        "timeIntervals": 30,
        "withPortal": false,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
